--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
--i https://pypi.org/simple
-about-time==4.2.1; python_version >= '3.7' and python_version < '4'
-alive-progress==3.2.0; python_version >= '3.9' and python_version < '4'
-certifi==2025.1.31; python_version >= '3.6'
-charset-normalizer==3.4.1; python_version >= '3.7'
-dpath==2.2.0; python_version >= '3.7'
+about-time==4.2.1
+alive-progress==3.2.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+dpath==2.2.0
 furl==2.1.4
 grapheme==0.6.0
-idna==3.10; python_version >= '3.6'
+idna==3.10
 orderedmultidict==1.0.1
-pillow==11.1.0; python_version >= '3.9'
-requests==2.32.3; python_version >= '3.8'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-urllib3==2.3.0; python_version >= '3.9'
+pastel==0.2.1
+pillow==11.2.1
+poethepoet==0.34.0
+pyyaml==6.0.2
+requests==2.32.3
+six==1.17.0
+urllib3==2.4.0
