--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ dependencies = [
     "alive-progress>=3.2.0",
     "dpath>=2.2.0",
     "furl>=2.1.4",
+    "loguru>=0.7.3",
     "pillow>=11.2.1",
     "requests>=2.32.3",
+    "ruff>=0.11.6",
 ]
 
 [dependency-groups]
@@ -18,6 +20,7 @@ dev = [
 
 [tool.poe.tasks]
 scrape = "python -m AM2S"
+format = "ruff format"
 
 [tool.ruff]
 line-length = 80
